[package]
name = "checked_expr"
version = "0.2.0"
authors = ["Sebastian Widua <seppel3210@gmail.com>"]
description = "a procedural macro for making writing checked_* chains more ergonomic"
repository = "https://github.com/Seppel3210/checked_expr"
documentation = "https://docs.rs/checked_expr"
license = "MIT OR Apache-2.0"
keywords = ["checked", "arithmetic", "integer", "overflow", "expressions"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"

