[package]
name = "checked_expr"
version = "0.3.0"
authors = ["Sebastian Widua <seppel3210@gmail.com>"]
description = "a procedural macro for making writing checked_* chains more ergonomic"
repository = "https://github.com/Seppel3210/checked_expr"
documentation = "https://docs.rs/checked_expr"
license = "MIT OR Apache-2.0"
keywords = ["checked", "arithmetic", "integer", "overflow", "expressions"]
categories = ["development-tools"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }

